--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -1,9 +1,9 @@
 {
   "Logging": {
     "LogLevel": {
-      "Default": "Information",
+      "Default": "Debug",
       "Microsoft": "Warning",
-      "Microsoft.Hosting.LifeTime": "Error"
+      "Microsoft.Hosting.LifeTime": "Information"
     }
   }
 }
