move greeter to it's own project

--- a/HostingPlayground.csproj
+++ b/HostingPlayground.csproj
@@ -11,6 +11,9 @@
     <PackageReference Include="System.CommandLine.Hosting" Version="0.4.0-alpha.22272.1" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\HostingPlayground.Greeter\HostingPlayground.Greeter.csproj" />
+  </ItemGroup>
+  <ItemGroup>
     <None Update="appsettings.Development.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
