--- a/Properties/launchSettings.json
+++ b/Properties/launchSettings.json
@@ -4,7 +4,8 @@
       "commandName": "Project",
       "commandLineArgs": "--name Mike",
       "environmentVariables": {
-        "DOTNET_hostBuilder:reloadConfigOnChange": "false"
+        "DOTNET_hostBuilder:reloadConfigOnChange": "false",
+        "DOTNET_ENVIRONMENT": "Staging"
       }
     }
   }
